# sleap-anipose

./: FOLDER_STRUCTURE.md  README.md  codecov.yml  environment.yml  setup.cfg
.github/workflows/: build.yml  ci.yml  lint.yml
docs/: CALIBRATION_GUIDE.md  FOLDER_STRUCTURE.md  SLEAP_GUIDE.md
sleap_anipose/: __init__.py  calibration.py  triangulation.py
tests/: conftest.py  test_calibration.py  test_triangulation.py
tests/data/minimal_session/: board.toml  board_checker.toml  calibration.metadata.h5  calibration.toml  points3d.h5
tests/data/minimal_session/back/: minimal_back_proofread.analysis.h5  minimal_back_proofread.slp
tests/data/minimal_session/back/calibration_images/: minimal_session-back-calibration.MOV
tests/data/minimal_session/mid/: minimal_mid_proofread.analysis.h5  minimal_mid_proofread.slp
tests/data/minimal_session/mid/calibration_images/: minimal_session-mid-calibration.MOV
tests/data/minimal_session/side/: minimal_side_proofread.analysis.h5  minimal_side_proofread.slp
tests/data/minimal_session/side/calibration_images/: minimal_session-side-calibration.MOV
tests/data/minimal_session/top/: minimal_top_proofread.analysis.h5  minimal_top_proofread.slp
tests/data/minimal_session/top/calibration_images/: minimal_session-top-calibration.MOV
tests/fixtures/: data.py
