[metadata]
name = sleap-anipose
version = 0.0.1
description = SLEAP to Anipose triangulation pipeline for 3D multi-animal pose tracking.
long_description = file: README.md, LICENSE
keywords = sleap, pose tracking, pose estimation, behavior
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    matplotlib
    imageio
    imageio-ffmpeg
    aniposelib

[options.entry_points]
console_scripts =
    slap-calibrate = sleap_anipose:calibration.calibrate_cli
    slap-triangulate = sleap_anipose:triangulation.triangulate_cli
    slap-write_board = sleap_anipose:calibration.write_board_cli

[options.extras_require]
dev =
    pytest
    pytest-cov
    black
    pydocstyle
    toml

[pydocstyle]
convention = google
match-dir = 'sleap_anipose'