[metadata]
name = sleap-anipose
version = attr: sleap_anipose.__version__
author = Sean Afshar
author_email = safshar@salk.edu
maintainer = Talmo Pereira
maintainer_email = talmo@salk.edu
url = https://github.com/talmolab/sleap-anipose
description = SLEAP to Anipose triangulation pipeline for 3D multi-animal pose tracking.
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
keywords = sleap, pose tracking, pose estimation, behavior
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    matplotlib
    h5py
    imageio
    imageio-ffmpeg
    opencv-contrib-python < 4.7.0
    aniposelib
    click

[options.entry_points]
console_scripts =
    slap-calibrate = sleap_anipose:calibration.calibrate_cli
    slap-triangulate = sleap_anipose:triangulation.triangulate_cli
    slap-write_board = sleap_anipose:calibration.write_board_cli
    slap-draw_board = sleap_anipose:calibration.draw_board_cli
    slap-reproject = sleap_anipose:triangulation.reproject_cli

[options.extras_require]
dev =
    pytest
    pytest-cov
    black
    pydocstyle
    toml
    twine
    build

[options.exclude_package_data]
tests = *
docs = *

[options.packages.find]
exclude =
    tests*
    docs*

[pydocstyle]
convention = google
match-dir = 'sleap_anipose'